Fix Connections alignment in Perform mode
Removed flex-start override that was left-aligning the midi-bar/osc-bar
pills in layout-a. They now inherit the default right-aligned behaviour,
matching Studio mode.

--- a/static/synthograsizer/css/layout-options.css
+++ b/static/synthograsizer/css/layout-options.css
@@ -180,11 +180,6 @@ body.layout-a #navbar-mount {
     margin-bottom: 0;
   }
 
-  /* Connections pills left-align naturally in the narrow right column */
-  .layout-a .connections-group .midi-bar,
-  .layout-a .connections-group .osc-bar {
-    justify-content: flex-start;
-  }
 }
 
 
